# KleinEngine2D

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: ErrorHandler.cpp  ErrorHandler.hpp  GL_TYPES.hpp  Game.cpp  ImageLoader.cpp  ImageLoader.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  __macros__only_hpp.hpp
